@@ -151,6 +151,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #1346533, select.poll() doesn't raise an error if timeout > sys.maxint
+
 - Fix memory leak in posix.access().
 
 - Patch #1213831: Fix typo in unicodedata._getcode.
